manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-application-service
  namespace: prod
spec:
  selector:
    app: my-application
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
